sidux-hermes (0.1.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * Initial release.
  * Qt4: update time changed
  * Cli: kernel function added
  * QT4: Kernel function added
  * Gtk2: conlicts tag updated

  [ Stefan Lippers-Hollmann ]
  * add ${misc:Depends} where needed.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 05 Feb 2009 22:39:29 +0100